# xai-personality-detection

./: .env.example  .flake8  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yaml  manifest  pyproject.toml  requirements.txt  run_all_baselines.sh  run_ml_grid.sh
.beads/: config.yaml  metadata.json
app/: demo.py
configs/: baseline_config.yaml  baseline_smoke_config.yaml  data_config.yaml  eval_config.yaml  kb_config.yaml  rag_xpr_config.yaml  retrieval_config.yaml  tier1_lr.yaml  tier2a_roberta_focal.yaml  tier2a_roberta_trunc.yaml  tier2a_roberta_weighted.yaml  tier2b_roberta_mlp_chunk.yaml  tier3_qwen_zeroshot.yaml  tier4_qwen_cope_norag.yaml  tier5a_rag_xpr.yaml
docs/: 01_CODEBASE_DESIGN.md  02_DATA_ACQUISITION.md  03_BASELINE_MODELS.md  04_RAG_XPR_PIPELINE.md  05_EXPERIMENT_PLAN.md  06_EVALUATION_PROTOCOL.md  07_BASELINE_RESULTS_ANALYSIS.md  08_DATA_ANALYSIS.md  09_KB_CHUNKING_STRATEGY.md  10_KB_CONSTRUCTION_REPORT.md  11_RESULTS_BY_DATASET_TABLES.md  BASELINE_RERUN_GUIDE.md  CLASSIFICATION_REPORTS.md  PROGRESS_SLIDES.md  README.md  WANDB_EXPERIMENT_INDEX.md
scripts/: analyze_datasets.py  analyze_datasets_supplement.py  audit_kb.py  augment_data.py  backfill_wandb_reports.py  build_kb.py  build_kb_enrichment_sources.py  cleanup_chinese_residue.py  convert_personality_evd.py  detailed_classification_report.py  download_data.py  download_embeddings.py  download_pandora_big5.py  evaluate.py  evaluate_kb_retrieval.py  export_confusion_matrices.py  export_kb_views.py  fix_mbti_runs.sh  generate_kb_dashboard.py  illustrate_dataset_issues.py  preprocess_data.py  preprocess_pandora_big5.py  rerun_roberta_personality_evd.sh  rerun_standardized_baselines.sh  resume_pipeline.sh  run_all_baselines.sh  run_all_experiments.py  run_cpu_classical_baselines.sh  run_gpu_transformer_baselines.sh  run_phase2_to_4.sh  run_rag_xpr.py  summarize_metrics.py  train_baseline.py  translate_personality_evd.py  visualize_more_insights.py
src/: __init__.py
src/data/: loader.py  (+7 more)
tests/: test_cope_pipeline.py  test_data_loader.py  test_evaluation.py  test_frozen_baselines.py  test_frozen_svm_scorer.py  test_kb_chunking.py  test_kb_enrichment_sources.py  test_kb_schema.py  test_pandora_big5_parser.py  test_retrieval.py  test_wandb_logging.py
(+82 files in other folders)
