[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-xpr"
version = "0.1.0"
description = "RAG-based Explainable Personality Recognition"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "sentence-transformers>=3.0.0",
    "datasets>=2.19.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "sentencepiece>=0.2.0",
    "kaggle>=1.6.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "qdrant-client>=1.9.0",
    "openai>=1.30.0",
    "wandb>=0.17.0",
    "tensorboard>=2.14.0",
    "rapidfuzz>=3.5.0",
    "jinja2>=3.1.0",
    "streamlit>=1.35.0",
    "scipy>=1.13.0",
    "statsmodels>=0.14.0",
    "shap>=0.45.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "krippendorff>=0.8.0",
    "spacy>=3.7.0",
    "rank-bm25>=0.2.2",
    "tiktoken>=0.7.0",
    "nltk>=3.8.0",
    "pypinyin>=0.54.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "pandas>=2.2.0",
    "loguru>=0.7.0",
    "numpy>=1.26.0",
    "torchvision>=0.26.0",
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203"]
per-file-ignores = [
    "scripts/*.py:E402",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
